<resources>
    <string name="app_name">Pizza Town</string>
    <string name="img_desc"> this is a ingredient of pizza </string>
    <string name="img_man"> this is a image of pizza  Man in order screen </string>
    <string name="cheese"> Cheese </string>
    <string name="mushroom"> Mushroom </string>
    <string name="tomato"> Tomato </string>
    <string name="olive"> Olive </string>
    <string name="basil"> Basil </string>
    <string name="pineapple"> Pineapple </string>
    <string name="check_out"> Proceed to Checkout </string>
    <string name="selected_ingridents"> your Selected Ingredients </string>
    <string name="back"> GO Back </string>
    <string name="confirm"> Confirm </string>
    <string name="margaritaOption">Margarita</string>
    <string name="mushroomOption">Mushroom Topping</string>
    <string name="newYorkOption">New York Style</string>
    <string-array name="pizzaTypes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
        <item>Family Size</item>
    </string-array>
    <string-array name="quantity">
        <item>Qty 1</item>
    </string-array>
</resources>